test/invalid-semantics/fc51601_const_func/const_func.mag
--- Author: fc51601, José Sousa

-- functions are not first class citizens

const f : Unit -> Unit = var i : Int = 1
fun main (_) : Unit -> Unit = print(f)